# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: And...
  repoman's arch check got hosed again.  The code in dep_check for 
  building a masklist was incorrect, 3 line fix. (#59574)

  03 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_dep.py: Again
	fixed the || exceptions to understand nested legal || statements.

*portage-2.0.51_pre16 (03 Aug 2004): Fixes and Public Readiness

  04 Aug 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Changed the
  virtual/glibc references to virtual/libc.

  04 Aug 2004; Nicholas Jones <carpaski@gentoo.org> prepman: No longer runs
  gzip on .keep files.

  04 Aug 2004; Nicholas Jones <carpaski@gentoo.org> getbinpkg.py: Added in
  an active/passive option for FTP connections -- Requires the appending of
  an asterisk to the HOST portion of the ftp string to use active connections.

  04 Aug 2004; Nicholas Jones <carpaski@gentoo.org> make.conf*: Updates for
  the active-connection ftp option.

  04 Aug 2004; Nicholas Jones <carpaski@gentoo.org> emergehelp.py: Removed
  the bin/ version and replaced it with a duplicated pym/ version.

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  Added check to ensure /var/tmp/portage's permissions were sane. (#56665)

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Added 
  explicit check for missing files directory, rather then ignoring it.
  Also added an explicit commit-time check for CVS/Entries being sane.
  (#57141).

  03 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: reworked 